# myspy

./: Makefile  README.md  pytest.ini  setup.cfg
.github/workflows/: python-package.yml
