[bdist_wheel]
universal = 0

[flake8]
ignore = E203, W503
max-line-length = 100

[metadata]
name = vidimera
version = attr: myspy.__version__
author = Lennart Fridén
author_email = lennart@devl.se
description = Python test spies and assorted test helpers.
keywords = [signature, behaviour]
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
requires_python = ~=3.11
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.11
  Topic :: Software Development :: Libraries
project_urls =
  Bug Reports = https://github.com/DevL/myspy/issues
  Source = https://github.com/DevL/myspy
url = https://github.com/DevL/myspy

[options]
package_dir =
  =src
packages=find:

[options.packages.find]
where = src
